--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,39 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
+#name: Java CI with Gradle
+
+#on:
+ # push:
+  #  branches: [master]
+  #pull_request:
+   # branches: [master]
+
+#jobs:
+ # build-java:
+  #  runs-on: ubuntu-latest
+    
+   # steps:
+   # - name: Depoyu çek
+    #  uses: actions/checkout@v2
+
+    #- name: JDK 1.8 kur
+    #  uses: actions/setup-java@v1
+     # with:
+      #  java-version: 1.8
+
+    #- name: gradlew için çalıştırma izni ver
+     # run: chmod +x gradlew
+
+    #- name: Gradle ile derleme yap
+     # run: ./gradlew build
+
+    #- name: Docker İmajını Oluştur ve Yayınla
+     # run: |
+      #  docker build -f Dockerfile -t ser2007/demo-app:latest .
+       # docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        #docker push ser2007/demo-app:latest
+
 name: Java CI with Gradle
 
 on:
@@ -23,7 +56,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: JDK 1.8 kur
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
         java-version: 1.8
 
@@ -34,8 +67,9 @@ jobs:
       run: ./gradlew build
 
     - name: Docker İmajını Oluştur ve Yayınla
-      run: |
-        docker build -f Dockerfile -t ser2007/demo-app:latest .
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker push ser2007/demo-app:latest
-
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        registry: 'https://index.docker.io/v1/'
+        tags: 'ser2007/demo-app:latest'
